# ic-query

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
crates/ic-query/: Cargo.toml
crates/ic-query-cli/: Cargo.toml
crates/ic-query-cli/src/: lib.rs  main.rs
crates/ic-query-cli/tests/: cli_smoke.rs
crates/ic-query/src/: duration.rs  lib.rs  output.rs  test_support.rs  tests.rs  token_amount.rs  token_metadata_text.rs
crates/ic-query/src/cache_file/: error.rs  policy.rs  tests.rs
crates/ic-query/src/cache_file/json/: announce.rs
crates/ic-query/src/cache_file/lock/: guard.rs
crates/ic-query/src/cache_file/write/: atomic.rs  output.rs  path.rs  tests.rs
crates/ic-query/src/cli/: clap.rs  globals.rs  help.rs  mod.rs  tests.rs
crates/ic-query/src/ic_registry/: annotations.rs  client.rs  error.rs
crates/ic-query/src/ic_registry/inventory/: data_center.rs
crates/ic-query/src/ic_registry/model/: data_center.rs  mod.rs  node.rs  node_operator.rs  request.rs
crates/ic-query/src/ic_registry/projection/: node.rs  node_operator.rs  node_provider.rs
crates/ic-query/src/ic_registry/proto/: mod.rs  subnet.rs
crates/ic-query/src/ic_registry/source/: agent.rs  subnet_catalog.rs
crates/ic-query/src/ic_registry/tests/: catalog.rs  fixtures.rs  governance.rs  wire.rs
crates/ic-query/src/ic_registry/tests/inventory/: data_center.rs  mod.rs  node.rs
crates/ic-query/src/ic_registry/transport/: chunk.rs  codec.rs  value.rs  version.rs
crates/ic-query/src/icrc/: commands.rs  live.rs  mod.rs  model.rs  text.rs
crates/ic-query/src/nns/: mod.rs  render.rs
crates/ic-query/src/nns/data_center/: mod.rs  reports.rs  run.rs  spec.rs
crates/ic-query/src/nns/data_center/report/: build.rs  cache.rs  mod.rs  refresh.rs  resolve.rs  source.rs  tests.rs
crates/ic-query/src/nns/data_center/report/model/: mod.rs  report.rs  request.rs
crates/ic-query/src/nns/leaf/: cache.rs  mod.rs  model.rs  paths.rs  run.rs  tests.rs
crates/ic-query/src/nns/leaf/commands/: args.rs  build.rs
crates/ic-query/src/nns/leaf/options/: common.rs  info.rs  list.rs  mod.rs
crates/ic-query/src/nns/macros/: leaf_requests.rs  mod.rs  test_helpers.rs
crates/ic-query/src/nns/node/: mod.rs
crates/ic-query/src/nns/node/commands/: list.rs  mod.rs  spec.rs  usage.rs
crates/ic-query/src/nns/node/report/: build.rs  cache.rs  filters.rs  mod.rs  refresh.rs  source.rs  tests.rs
crates/ic-query/src/nns/node/run/: info.rs  list.rs  mod.rs  refresh.rs
crates/ic-query/src/nns/node_operator/: mod.rs  reports.rs  run.rs  spec.rs  test_helpers.rs
crates/ic-query/src/nns/node_operator/report/: build.rs  cache.rs  mod.rs  refresh.rs  source.rs  tests.rs
crates/ic-query/src/nns/node_provider/: mod.rs  reports.rs  run.rs  spec.rs
crates/ic-query/src/nns/node_provider/report/: build.rs  cache.rs  mod.rs  refresh.rs  resolve.rs  source.rs
crates/ic-query/src/nns/proposals/: commands.rs  mod.rs  run.rs
crates/ic-query/src/nns/proposals/report/: assemble.rs  mod.rs  model.rs  text.rs  view.rs
crates/ic-query/src/nns/registry/: commands.rs  mod.rs  run.rs
crates/ic-query/src/nns/registry/report/: build.rs  error.rs  mod.rs  model.rs  source.rs  tests.rs
crates/ic-query/src/nns/subnet/: options.rs
crates/ic-query/src/nns/subnet/commands/: args.rs  info.rs  usage.rs
crates/ic-query/src/nns/subnet/run/: info.rs  list.rs  mod.rs  refresh.rs
crates/ic-query/src/nns/tests/: node.rs  node_operator.rs  node_provider.rs  proposals.rs  registry.rs  topology_help.rs
crates/ic-query/src/nns/topology/: mod.rs
crates/ic-query/src/nns/topology/commands/: mod.rs  read.rs  root.rs  usage.rs
crates/ic-query/src/nns/topology/options/: read.rs
crates/ic-query/src/nns/topology/report/: coverage.rs  mod.rs  percent.rs  source.rs  versions.rs
crates/ic-query/src/nns/topology/run/: mod.rs  read.rs  refresh.rs
crates/ic-query/src/snapshot_cache/: key.rs  lifecycle.rs  mod.rs  model.rs  paths.rs  tests.rs
crates/ic-query/src/sns/: mod.rs
crates/ic-query/src/sns/commands/: error.rs  mod.rs
crates/ic-query/src/sns/commands/options/: common.rs  lookup.rs
crates/ic-query/src/sns/commands/run/: common.rs
crates/ic-query/src/sns/commands/spec/: mod.rs
crates/ic-query/src/sns/commands/tests/: list.rs  lookup.rs  proposals.rs
crates/ic-query/src/sns/report/: cache_paths.rs  cache_status.rs  mod.rs
crates/ic-query/src/sns/report/assemble/: list.rs  mod.rs  neurons.rs  proposals.rs
crates/ic-query/src/sns/report/live/: client.rs  mod.rs
crates/ic-query/src/sns/report/lookup/: ids.rs  request.rs  resolve.rs
crates/ic-query/src/sns/report/model/: mod.rs
crates/ic-query/src/sns/report/neurons_cache/: mod.rs  model.rs  paths.rs
crates/ic-query/src/sns/report/proposals_cache/: errors.rs  mod.rs  paths.rs
crates/ic-query/src/sns/report/source/: mod.rs  traits.rs
crates/ic-query/src/sns/report/tests/: list.rs  mod.rs
crates/ic-query/src/sns/report/text/: common.rs  info.rs  list.rs  mod.rs  token.rs
crates/ic-query/src/sns/report/view/: list.rs  neurons.rs
crates/ic-query/src/subnet_catalog/: error.rs  json.rs  mod.rs  time.rs
crates/ic-query/src/subnet_catalog/core_tests/: catalog.rs  fixtures.rs  mod.rs  resolve.rs
crates/ic-query/src/subnet_catalog/host/: cache.rs  mod.rs  refresh.rs  source.rs
crates/ic-query/src/subnet_catalog/model/: validation.rs
crates/ic-query/src/subnet_catalog/model/classification/: kind.rs  source.rs
crates/ic-query/src/subnet_catalog/report/: info.rs  list.rs  mod.rs  rate.rs
crates/ic-query/src/subnet_catalog/report/model/: info.rs  list.rs  refresh.rs  stale.rs
crates/ic-query/src/subnet_catalog/resolver/: canister.rs  mod.rs  prefix.rs
crates/ic-query/src/subnet_catalog/tests/: cache.rs  fixtures.rs  info.rs  mod.rs  stale_time.rs
crates/ic-query/src/subnet_catalog/text/: info.rs  mod.rs  refresh.rs
crates/ic-query/src/subnet_catalog/text/list/: verbose.rs
crates/ic-query/tests/: downstream_usage.rs  icrc_public_api.rs  nns_public_api.rs  sns_public_api.rs  subnet_catalog_public_api.rs
src/: hex.rs  (+11 more)
(+880 files in other folders)
