[workspace]
members = ["crates/ic-query", "crates/ic-query-cli"]
resolver = "3"

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
homepage = "https://github.com/dragginzgame/ic-query"
repository = "https://github.com/dragginzgame/ic-query"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ic-query = { path = "crates/ic-query", version = "0.6.0", default-features = false }
thiserror = "2.0"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# always warn
missing_const_for_fn = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"

# always allow
doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
struct_field_names = "allow"
